fixed layout bug occluding err msg. Added a sample

--- a/style/mscgen.css
+++ b/style/mscgen.css
@@ -15,8 +15,6 @@ p {
 }
 textarea {
     border           : solid 0px;
-    width            : 100%;
-    height           : 100%;
 }
 
 #input_and_controls {
@@ -26,11 +24,14 @@ textarea {
     max-width        : 100%;
     max-height       : 100%;
     width            : 30em;
-    height           : 25em;
 }
 
 #input_and_controls > #btn_render {
     display : none;
+}
+#input_and_controls > #msc_input {
+    width            : 100%;
+    height           : 32em;
 }
 #input_and_controls > #error_output {
     z-index          : 0;
@@ -56,6 +57,10 @@ textarea {
     background-color : white;
     opacity : 0.96;
     display : none;
+}
+#textcopybox {
+    width            : 100%;
+    height           : 100%;
 }
 
 #textcopyform {
